# opendataloader-pdf-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  test_server.py
.github/workflows/: tests.yml
opendataloader_pdf_mcp/: __init__.py  server.py
pdf_analyzer/: __init__.py  __main__.py  server.py
skills/opendataloader-pdf/: SKILL.md
tests/: test_helpers.py  test_mcp_protocol.py  test_server.py
